<resources>
    <string name="url" translatable="false">http://197.254.205.74/api/</string>
    <string name="images_url" translatable="false">http://197.254.205.74/storage/</string>
    <string name="syber_url" translatable="false">https://syberpay.test.sybertechnology.com/syberpay/</string>
    <string name="name_test" translatable="false">mohaned mohamed omran</string>
    <string name="countdown_exmp" translatable="false">00:00:01:00</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="app_name">Monasba</string>
    <string name="app_ver" translatable="false">Version 1.0.0</string>
    <string name="home">الرئيسية</string>
    <string name="profile">الملف الشخصي</string>
    <string name="username">اسم المستخدم</string>
    <string name="aboutus">تواصل معنا </string>
    <string name="check_internet">الرجاء التحقق من إتصالك بالإنترنت!</string>
    <string name="service_unavailable">هذه الخدمة ستتوفر قريبا</string>
    <string name="press_back">إضغط تراجع مرة أخرى للخروج</string>
    <string name="fill_error">الرجاء إكمال جميع الحقول أولا !</string>
    <string name="try_later">الرجاء المحاولة مرة أخرى لاحقا</string>
    <string name="verfication_code">رمز التحقق</string>
    <string name="country">البلد</string>
    <string name="num_of_ppl">عدد الحضور</string>
    <string name="type_of_reservation">نوع الحجز</string>
    <string name="night">ليلي</string>
    <string name="day">نهاري</string>
    <string name="request">طلب</string>
    <string name="include_meal">الوجبة </string>
    <string name="meal_yes">إجباري</string>
    <string name="meal_no">إختياري</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="search">بحث</string>
    <string name="name">الاسم</string>
    <string name="save">حفظ</string>
    <string name="phone">رقم الهاتف</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="enter_verfication">الرجاء إدخال رمز التحقق المرسل إليك</string>
    <string name="forget_password">نسيت كلمة المرور ؟</string>
    <string name="dont_have_account">ليس لديك حساب ؟</string>
    <string name="signup">التسجيل</string>
    <string name="verify">تحقق</string>
    <string name="please_enter_number">سوف يتم إرسال رسالة تحقق … الرجاء إدخال مفتاح البلد ورقم الهاتف</string>
    <string name="full_name">الاسم الكامل</string>
    <string name="send">إرسال</string>
    <string name="label_error_incorrect_phone">رقم الهاتف غير صحصح</string>
    <string name="insure_dialog">سوف يتم التحقق من رقم الهاتف.</string>
    <string name="is_this_ok">هل هذا الرقم صحيح ؟ أو تريد تعديله ؟</string>
    <string name="ok">تم</string>
    <string name="edit">تعديل</string>
    <string name="hello_blank_fragment">مرحبا .. قسم فارغ</string>
    <string name="whatsapp_phone">رقم الواتس اب</string>
    <string name="_9_123_456_78">0XXX XXX XXX</string>
    <string name="gender">النوع</string>
    <string name="edit_birthdate">إضغط هنا لتعديل تاريخ الميلاد</string>
    <string name="date_example">YYYY-MM-DD</string>
    <string name="service">نوع الخدمة</string>
    <string name="certificates">الشهادات والخبرة</string>
    <string name="city">المدينة</string>
    <string name="bus_type">نوع العربة</string>
    <string name="num_of_bus">عدد الباصات</string>
    <string name="pickup_address">عنوان التحرك</string>
    <string name="dropoff_address">عنوان الوصول</string>
    <string name="main_phone">الهتاف الرئيسي </string>
    <string name="sub_phone">الهاتف الثانوي</string>
    <string name="halls">الصالات</string>
    <string name="nemaSaving">وجبة الخير</string>
    <string name="zfa">الزفة</string>
    <string name="photographer">المصور الفوتوغرافي</string>
    <string name="barber">حلاق</string>
    <string name="hairdresser">ميكب ارتست</string>
    <string name="hotels">الفنادق والشقق</string>
    <string name="honey_moon">شهر العسل</string>
    <string name="bus">السيرة</string>
    <string name="meeting_halls">غرف الإجتماعات</string>
    <string name="org_group">تنظيم مجموعات</string>
    <string name="kitchens">مطابخ</string>
    <string name="outdoor_halls">صالات خارجية</string>
    <string name="party_designer">مصمم حفلات</string>
    <string name="retype_password">إعادة كلمة المرور</string>
    <string name="packages">الباقات</string>
    <string name="meal_offers">عروض الوجبات</string>
    <string name="details">التفاصيل</string>
    <string name="longstring">fioewjfiuehf fiunvekjrn rjhjhrf hjebf brfjbrfioewjfiuehf fiunvekjrn rjhjhrf hjebfhre uehf fiunvekjrn rjhjhrf hjebfhre fioewjfiuehf fiunvekjn rjhjhrf hjebfhre vjrefjb efbjbf brfjbrfioewjfiuehf fiunvekjrn rjhjhrf hjebfhre fioewjfiuehf fiunvekjrn rjhjhrf hjebfhre vjrefjb efbjbf brfjbrfioewjfiuehf fiunvekjrn rjhjhrf hjebfhre fioewjfiuehf fiunvekjrn rjhjhrf hjebfhre vjrefjb efbjbf brfjbrfioewjfiuehf fiunvekjrn rjhjhrf hjebfhre vjrefjb efbjbf brfjbrfioewjfiuehf fiunvekjrn rjhjhrf hjebfhre vjrefjb efbjbf brfjbr</string>
    <string name="select">إختيار</string>
    <string name="faq">الأسئلة المتكررة</string>
    <string name="agreement">سياسة الإستخدام</string>
    <string name="unavailable">هذه الخدمة غير متوفرة حاليا … الرجاء المحاولة لاحقا</string>
    <string name="num1">0 – 500</string>
    <string name="num2">501 – 1000</string>
    <string name="num3">1001 – 1500</string>
    <string name="num4">1501 – 2000</string>
    <string name="intro">تفاصيل عرسك كلها في تطبيق واحد أحجز الصالة/الأوت دور، الاستوديو و عروض شهر العسل و أكتر</string>
    <string name="password_unmatch">الرجاء التأكد من كلمة المرور</string>
    <string name="wrong_password">خطاء في رقم الهاتف أو كلمة المرور</string>
    <string name="next">التالي</string>
    <string name="back">تراجع</string>
    <string name="hall_res1">الحجز </string>
    <string name="hall_res2">شروط الصالة</string>
    <string name="hall_res3">الفاتورة</string>
    <string name="limo_req1">البيانات</string>
    <string name="limo_req2">شروط الحجز</string>
    <string name="limo_req3">بيانات التواصل</string>
    <string name="seera_req1">البيانات</string>
    <string name="seera_req2">المتطلبات</string>
    <string name="seera_req3">الفاتورة</string>
    <string name="seera_req4">تم</string>
    <string name="phone1">رقم الهاتف 1</string>
    <string name="phone2">رقم الهاتف 2</string>
    <string name="name1">الاسم 1</string>
    <string name="name2">الاسم 2</string>
    <string name="agreetoterm">أنا أوافق علي الشروط والأحكام</string>
    <string name="signout">تسجيل الخروج</string>
    <string name="pendding_req">الطلب تحت المعالجة</string>
    <string name="pendding_req_msg">سوف يتم التواصل معك عندما نتأكد من طلبك \n يمكنك متابعة طلبك من خلال صفحة طلباتي الحالية</string>
    <string name="please_wait">الرجاء الأنتظار</string>
    <string name="no_data">لا توجد نتائج</string>
    <string name="hall_search">البحث</string>
    <string name="grace_saving_desc">وجبة الخير هي خدمة خيريه مقصود منها التبرع بالفائض من وجبة المناسبة للمحتاجين عن طريق المنظمات الخيريه ، قم بالاتصال بارقام المنظمات حسب المنطقه الجغرافيه داخل التطبيق وسوف تقوم المنظمة بنقل الوجبات  واعادة تعباتها وتوزيعها .</string>
    <string name="test_search">تجربة عملية الحجز</string>
    <string name="delete_req">حذف الطلب</string>
    <string name="insure">تأكيد</string>
</resources>