<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgwhite">
<LinearLayout
    android:id="@+id/loading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="bottom">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_centerInParent="false" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/handlee"
        android:text="@string/please_wait"
        android:textAlignment="center" />
</LinearLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="visible"
        tools:context=".search_halls">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/handlee"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/hall_search"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="19sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1.05"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_editbox_border"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:layout_weight="1.7"
                    app:srcCompat="@drawable/outlined_ui_date" />

                <TextView
                    android:id="@+id/reservation_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:text="@string/date_example" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1.02"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <LinearLayout
                android:background="@drawable/rounded_editbox_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/handlee"
                    android:text="@string/city"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/handlee"
                    android:hint="@string/country"
                    android:inputType=""
                    android:singleLine="true"
                    android:textSize="14sp"
                    app:met_baseColor="@color/primary_text"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimaryDark"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:background="@null"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_editbox_border"
                android:orientation="vertical">

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/handlee"
                    android:text="@string/num_of_ppl"
                    android:textColor="@color/colorPrimaryDark"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_margin="15dp"
                    android:layout_height="wrap_content">


                    <pl.polak.clicknumberpicker.ClickNumberPickerView
                        android:id="@+id/num_of_people"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:integer_priority="true"
                        app:max_value="4000"
                        app:min_value="100"
                        app:picker_corner_radius="10"
                        app:pickers_background_color="@color/colorPrimary"
                        app:step="100"
                        app:swipe_enabled="false"
                        app:value="100"
                        app:value_background_color="@color/colorPrimaryDark"
                        app:value_text_color="@color/white" />
                </RelativeLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1.01"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/handlee"
                    android:text="@string/type_of_reservation"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/night"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/handlee"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/night"
                        android:textColor="@color/secondary_text"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/handlee"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/day"
                        android:textColor="@color/secondary_text"
                        android:textSize="15sp" />
                </RadioGroup>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1.01"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/handlee"
                    android:text="@string/include_meal"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/yes"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/handlee"
                        android:paddingLeft="11dp"
                        android:paddingRight="11dp"
                        android:text="@string/meal_yes"
                        android:textColor="@color/secondary_text"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/no"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/handlee"
                        android:paddingLeft="11dp"
                        android:paddingRight="11dp"
                        android:text="@string/meal_no"
                        android:textColor="@color/secondary_text"
                        android:textSize="15sp" />
                </RadioGroup>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/gradian_background"
                android:fontFamily="@font/handlee"
                android:text="@string/search"
                android:textColor="@color/white"></Button>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:layout_weight="1">

            <Button
                android:id="@+id/test_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/gradian_background"
                android:fontFamily="@font/handlee"
                android:text="@string/test_search"
                android:textColor="@color/white"></Button>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
